src/test/ui/associated-item/issue-48027.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-48027.rs:3:32
   |
LL |     fn return_n(&self) -> [u8; Bar::X];
   |                                ^^^^^^
   |                                |
   |                                cannot infer type
   |                                help: use the fully qualified path to an implementation: `<Type as Bar>::X`
   |
   = note: cannot satisfy `_: Bar`
   = note: associated constants cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/issue-48027.rs:6:6
   |
LL | impl dyn Bar {}
   |      ^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-48027.rs:2:11
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     const X: usize;
   |           ^ ...because it contains this associated `const`
   = help: consider moving `X` to another trait

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0038, E0283.
For more information about an error, try `rustc --explain E0038`.
